# GithubScraper

./: README.md  docker-compose.yml
client/: README.md  index.html  package-lock.json  package.json
client/src/: App.css  App.tsx  index.css
client/src/apis/: projects.api.ts  users.api.ts
client/src/components/: CustomNumberInput.tsx  CustomTextInput.tsx  ErrorComponent.tsx  ProjectCard.tsx  UserCard.tsx
client/src/components/layout/: NavBar.tsx
client/src/components/styled-inputs/: StyledButton.tsx  StyledInputElement.tsx  StyledInputRoot.tsx
client/src/contexts/: query.context.tsx  theme.context.tsx
client/src/hooks/: projects.hooks.ts  users.hooks.ts
client/src/pages/RecentUsersPage/: RecentUsersPage.tsx
client/src/pages/StarredProjectsPage/: StarredProjectsPage.tsx
client/src/pages/UserProjectsPage/: UserProjectsPage.tsx
client/src/utils/: api-request.ts  pipes.ts  types.ts  urls.ts
server/: .gitignore  README.md  pyproject.toml
server/app/: __init__.py  models.py
server/app/controllers/: projects_controller.py  users_controller.py
server/app/services/: projects_services.py  scraping_service.py  users_services.py
server/app/transformers/: project_transformer.py  user_transformer.py
server/app/utils/: custom_api.py  error.py
server/migrations/versions/: 04cce702d619_.py  43ecc7aa5994_.py  916d288ab467_.py  a8269b4a3836_.py  ee89adc2a8a1_.py
server/tests/: test_app.py  test_projects_controller.py  test_projects_service.py  test_users.py  test_users_controller.py  test_users_service.py
